[workspace]
resolver = "2"
members = [
    "easytier",
    "easytier-gui/src-tauri",
    "easytier-web",
    "easytier-contrib/easytier-ffi",
    "easytier-contrib/easytier-uptime",
    "easytier-contrib/easytier-android-jni",
]
default-members = ["easytier", "easytier-web"]
exclude = [
    "easytier-contrib/easytier-ohrs", # it needs ohrs sdk
]

[workspace.package]
edition = "2024"
rust-version = "1.95"

[profile.dev]
panic = "unwind"
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true

# Faster iteration for `cargo bench`: disable LTO and raise codegen-units so
# incremental rebuilds after small edits finish in seconds instead of minutes.
[profile.bench]
inherits = "release"
lto = false
codegen-units = 16
debug = false
strip = false
